RESOLVED FIXED238933
Unreviewed, non-unified build fixes
https://bugs.webkit.org/show_bug.cgi?id=238933
Summary Unreviewed, non-unified build fixes
Lauro Moura
Reported 2022-04-07 07:14:19 PDT
Unreviewed, non-unified build fixes
Attachments
Patch (1.66 KB, patch)
2022-04-07 07:15 PDT, Lauro Moura
no flags
Lauro Moura
Comment 1 2022-04-07 07:15:16 PDT
EWS
Comment 2 2022-04-07 10:14:44 PDT
Committed r292542 (249380@main): <https://commits.webkit.org/249380@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 456920 [details].
Radar WebKit Bug Importer
Comment 3 2022-04-07 10:17:50 PDT
Darin Adler
Comment 4 2022-04-08 10:47:29 PDT
Comment on attachment 456920 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=456920&action=review > Source/WebCore/ChangeLog:8 > + * platform/graphics/filters/FilterEffectVector.h: Replace forward with > + actual include for Ref. Why? Can’t the other files that *use* FilterEffectVector add this include instead?
Note You need to log in before you can comment on or make changes to this bug.