Unreviewed, non-unified build fixes https://bugs.webkit.org/show_bug.cgi?id=238933

* css/CSSToStyleMap.h: Forward declare Quad
* platform/graphics/filters/FilterEffectVector.h: Replace forward with
actual include for Ref.

Canonical link: https://commits.webkit.org/249380@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292542 268f45cc-cd09-0410-ab3c-d52691b4dbfc