Source/WebCore/platform/graphics/filters/FilterEffectVector.h
@@ -25,11 +25,10 @@
 
 #pragma once
 
+#include "FilterEffect.h"
 #include <wtf/Vector.h>
 
 namespace WebCore {
-
-class FilterEffect;
 
 using FilterEffectVector = Vector<Ref<FilterEffect>>;
 
